k8s-test/opensearch-node1-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    node.service: opensearch-node1
  name: opensearch-node1
spec:
  ports:
    - name: "9200"
      port: 9200
      targetPort: 9200
    - name: "9600"
      port: 9600
      targetPort: 9600
  selector:
    node.service: opensearch-node1
status:
  loadBalancer: {}
