k8s-test/opensearch-net-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: opensearch-net
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              open.network/opensearch-net: "true"
  podSelector:
    matchLabels:
      open.network/opensearch-net: "true"
